TodoApp/manifests/deployment-backend-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: todoapp-backend
  namespace: todoapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app-backend: todoapp-backend
  strategy:
    canary:
      steps:
        - setWeight: 50
        - analysis:
            templates:
              - templateName: cpu-rate
  template:
    metadata:
      labels:
        app-backend: todoapp-backend
    spec:
      containers:
        - name: todoapp-backend
          image: TODOAPP_BACKEND_IMAGE_PLACEHOLDER
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 30
            httpGet:
              path: /healthz
              port: 5000
          livenessProbe:
            initialDelaySeconds: 10
            periodSeconds: 60
            httpGet:
              path: /healthz
              port: 5000
          resources:
            limits:
              cpu: "150m"
              memory: "200Mi"
          ports:
            - containerPort: 5000
