TodoApp/manifests/deployment-broadcaster-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: todoapp-broadcaster
  namespace: todoapp
spec:
  replicas: 4
  selector:
    matchLabels:
      app-broadcaster: todoapp-broadcaster
  strategy:
    canary:
      steps:
        - setWeight: 50
        - analysis:
            templates:
              - templateName: cpu-rate
  template:
    metadata:
      labels:
        app-broadcaster: todoapp-broadcaster
    spec:
      containers:
        - name: todoapp-broadcaster
          image: TODOAPP_BROADCASTER_IMAGE_PLACEHOLDER
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 30
            httpGet:
              path: /healthz
              port: 6000
          livenessProbe:
            initialDelaySeconds: 10
            periodSeconds: 60
            httpGet:
              path: /healthz
              port: 6000
          resources:
            limits:
              cpu: "150m"
              memory: "200Mi"
          ports:
            - containerPort: 6000
