TodoApp/manifests/deployment-frontend.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: todoapp-frontend
  namespace: todoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app-frontend: todoapp-frontend
  strategy:
    canary:
      steps:
        - setWeight: 100
        - analysis:
            templates:
              - templateName: cpu-rate
  template:
    metadata:
      labels:
        app-frontend: todoapp-frontend
    spec:
      containers:
        - name: todoapp-frontend
          image: TODOAPP_FRONTEND_IMAGE_PLACEHOLDER
          resources:
            limits:
              cpu: "250m"
              memory: "1000Mi"
          ports:
            - containerPort: 3000
