TodoApp/manifests/deployment-persistent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      volumes:
        - name: shared-images
          persistentVolumeClaim:
            claimName: todoapp-claim
      containers:
        - name: todoapp
          image: mikkolep/todoapp:v2
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-images
              mountPath: /usr/src/app/files
