TodoApp/manifests/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-backend-service
  namespace: todoapp
spec:
  type: ClusterIP
  selector:
    app-backend: todoapp-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
