TodoApp/manifests/postgresql-service.yaml
# PostgreSQL StatefulSet Service
apiVersion: v1
kind: Service
metadata:
  name: postgres-db-svc
  namespace: todoapp
spec:
  selector:
    app: postgresql-db
  clusterIP: None
  ports:
    - port: 5432
      targetPort: 5432
