TodoApp/manifests/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-frontend-svc
  namespace: todoapp
spec:
  type: NodePort
  selector:
    app-frontend: todoapp-frontend
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
